[gd_scene load_steps=15 format=3 uid="uid://c6w1do32qu3g4"]

[ext_resource type="Script" path="res://scenes/Microgames/blowthecartridge/scripts2/game_boy.gd" id="1_abhwc"]
[ext_resource type="Texture2D" uid="uid://dem8p6oerqgm8" path="res://scenes/Microgames/blowthecartridge/assets2/Game Boy Cartridge.png" id="1_ufv6p"]
[ext_resource type="Texture2D" uid="uid://e0cmt13v4a1d" path="res://scenes/Microgames/blowthecartridge/assets2/Wind.png" id="2_bscot"]
[ext_resource type="PackedScene" uid="uid://cuxf3eq4jumwn" path="res://scenes/Microgames/blowthecartridge/scenes2/dust_particles.tscn" id="4_3l132"]
[ext_resource type="Texture2D" uid="uid://g7ttvi4sgcei" path="res://scenes/Microgames/blowthecartridge/assets2/Game Boy Screen.png" id="5_ouayi"]
[ext_resource type="Texture2D" uid="uid://5cbvskv1o0ut" path="res://scenes/Microgames/blowthecartridge/assets2/Game Boy Working Screen.png" id="6_72bu5"]
[ext_resource type="Texture2D" uid="uid://doy1jhks51305" path="res://scenes/Microgames/blowthecartridge/assets2/Game Boy Broken Screen.png" id="7_twn5u"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_e0hxo"]

[sub_resource type="Animation" id="Animation_05gcc"]
resource_name = "HideCartridge"
length = 0.500003
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("GameBoyCartridge:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(0, 1500)]
}

[sub_resource type="Animation" id="Animation_hikvd"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("WindSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("GameBoyScreen:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 2000)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("GameBoyCartridge:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("WorkingScreen:frame")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}

[sub_resource type="Animation" id="Animation_edtin"]
resource_name = "ShowScreen"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("GameBoyScreen:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0, 1500), Vector2(0, 200)]
}

[sub_resource type="Animation" id="Animation_bgu7t"]
resource_name = "WindBlowing"
length = 0.466673
loop_mode = 1
step = 0.0666667
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("WindSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.0666667, 0.133333, 0.2, 0.266667, 0.333333, 0.4),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6]
}

[sub_resource type="Animation" id="Animation_hyu2s"]
resource_name = "WorkingScreen"
length = 0.500003
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("WorkingScreen:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.0333333, 0.0666667, 0.1, 0.133333, 0.166667),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_8gvqg"]
_data = {
"HideCartridge": SubResource("Animation_05gcc"),
"RESET": SubResource("Animation_hikvd"),
"ShowScreen": SubResource("Animation_edtin"),
"WindBlowing": SubResource("Animation_bgu7t"),
"WorkingScreen": SubResource("Animation_hyu2s")
}

[node name="GameBoy" type="CharacterBody2D"]
script = ExtResource("1_abhwc")

[node name="GameBoyCartridge" type="Sprite2D" parent="."]
texture = ExtResource("1_ufv6p")

[node name="WindSprite" type="Sprite2D" parent="."]
position = Vector2(42, 331)
scale = Vector2(3, 3)
texture = ExtResource("2_bscot")
vframes = 7
frame = 1

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_e0hxo")
disabled = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_8gvqg")
}

[node name="PressTimer" type="Timer" parent="."]
wait_time = 0.2

[node name="DustParticles" parent="." instance=ExtResource("4_3l132")]
position = Vector2(-2, 150)

[node name="DustParticles2" parent="." instance=ExtResource("4_3l132")]
position = Vector2(-2, 150)

[node name="GameBoyScreen" type="Sprite2D" parent="."]
position = Vector2(0, 2000)
texture = ExtResource("5_ouayi")

[node name="EndOfGameTimer" type="Timer" parent="."]

[node name="WorkingScreen" type="Sprite2D" parent="."]
position = Vector2(6, 219)
scale = Vector2(15, 15)
texture = ExtResource("6_72bu5")
hframes = 10
frame = 1

[node name="GameTimer" type="Timer" parent="."]
wait_time = 5.0

[node name="BrokenScreen" type="Sprite2D" parent="."]
position = Vector2(11, 223)
scale = Vector2(15, 15)
texture = ExtResource("7_twn5u")

[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_animation_player_animation_finished"]
[connection signal="timeout" from="PressTimer" to="." method="_on_press_timer_timeout"]
[connection signal="timeout" from="GameTimer" to="." method="_on_game_timer_timeout"]
